syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mycompany.checkout";
option java_outer_classname = "CheckoutProto";
option objc_class_prefix = "HLW";

package com.mycompany.checkout;

service CheckoutService {
  rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderReply) {}
}

message PlaceOrderRequest {
  string name = 1;
}

message PlaceOrderReply {
  string message = 1;
}
